--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -48,9 +48,9 @@
 
        <div class="col-lg-6">
         <div class="logo">
-          <img src="assets/img/logo.svg" alt="" class="img-fluid" style="width: 80px;" />
-          <span class="d-none d-sm-block">{{'DEPARTMENT_OF_AGRICULTURE' | translate}}<br>{{'GOVERNMENT_OF_UTTARPRADESH' | translate}}</span>
-          <img src="assets/img/darshan.png" alt="" class="img-fluid" style="width: 80px;" />
+          <a href="http://agriculture.up.gov.in/" target="_blank"><img src="assets/img/logo.svg" alt="" class="img-fluid" style="width: 80px;" /></a>
+          <p>{{'DEPARTMENT_OF_AGRICULTURE' | translate}}<span class="d-none d-sm-block"><br>{{'GOVERNMENT_OF_UTTARPRADESH' | translate}}</span></p>
+          <a href="http://agriculture.up.gov.in/" target="_blank"><img src="assets/img/darshan.png" alt="" class="img-fluid" style="width: 80px;" /></a>
             <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.svg" alt="" class="img-fluid" style="width: 80px;" /></a>
             <span style="font-size: 10px;">Department of Agriculture</span>
             <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/darshan.png" alt="" class="img-fluid" style="width: 80px;" /></a> -->
