Issues Fixes on 090823

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -4,24 +4,20 @@
     <div class="container-fluid">
       <div class="row">
         <div class="useful_link">
-          <h2>Useful link</h2>
+          <h2>{{'USEFUL_LINKS'| translate}}</h2>
           <ul>
-            <li><a href="#">Natural Farming Programme, UP</a></li>
-            <li><a href="#">FPO Power</a></li>
-            <li><a href="#">Problem Solving System</a></li>
-            <li><a href="#">Uttar Pradesh Seed Certification Institute</a></li>
-            <li><a href="#">Natural Farming Programme, UP</a></li>
-            <li><a href="#">FPO Power</a></li>
-            <li><a href="#">Problem Solving System</a></li>
-            <li><a href="#">Uttar Pradesh Seed Certification Institute</a></li>
-            <li><a href="#">Natural Farming Programme, UP</a></li>
-            <li><a href="#">FPO Power</a></li>
-            <li><a href="#">Problem Solving System</a></li>
-            <li><a href="#">Uttar Pradesh Seed Certification Institute</a></li>
-            <li><a href="#">Natural Farming Programme, UP</a></li>
-            <li><a href="#">FPO Power</a></li>
-            <li><a href="#">Problem Solving System</a></li>
-            <li><a href="#">Uttar Pradesh Seed Certification Institute</a></li>
+            <li><a href="http://agrilicense.upagriculture.com/pcrs/"
+              target="_blank">{{'PARTICIPATORY_CROP_MONITORING'| translate}}</a></li>
+            <li><a href="http://agriculture.up.gov.in/seed/"
+              target="_blank">{{'SEED_MONITORING_SYSTEM'| translate}}</a></li>
+            <li><a href="http://agrilicense.upagriculture.com:81/cms/"
+              target="_blank">{{'PM_KISSAN'| translate}}</a></li>
+            <li><a href="http://agriculture.up.gov.in/nmnf/natural_farming/nmnf"
+              target="_blank">{{'NATURAL_FARMING'| translate}}</a></li>
+            <li><a href="http://www.upfposhakti.com/"
+              target="_blank">{{'FPO_SHAKTI'| translate}}</a></li>
+            <li><a href="https://soilhealth.dac.gov.in/home"
+              target="_blank">{{'SOIL_HEALTH_CARD'| translate}}</a></li>
           </ul>
         </div>
       </div>
@@ -32,18 +28,20 @@
       <div class="row">
         <div class="col-lg-10">
           <div class="footer_visitor">
-            <p>You are Visitor No: <span>4626936</span></p>
-            <p>Last reviewed and updated on :18-07-2023</p>
+            <p>{{'YOUR_VISITOR_NO'| translate}}<span>4626936</span></p>
+            <p>{{'REVIEWED_DATE'| translate}} : 18-07-2023</p>
           </div>
         </div>
         <div class="col-lg-2">
           <div class="footer_social">
-            <h6>JOIN US</h6>
+            <h6>{{'FOLLOW_US'| translate}}</h6>
             <ul>
-              <li><a href="#"><i class="facebook fab fa-facebook-f"></i></a></li>
-              <li><a href="#"><i class="twitter fab fa-twitter"></i></a></li>
+              <li><a href="https://www.facebook.com/upagriculturedepartment"
+                target="_blank"><i class="facebook fab fa-facebook-f"></i></a></li>
+              <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fupagriculture"
+                target="_blank"><i class="twitter fab fa-twitter"></i></a></li>
               <li><a href="#"><i class="linkedin fab fa-linkedin-in"></i></a></li>
-              <li><a href="#"><i class="youtube fas fa-play"></i></a></li>
+              <li><a href="https://www.youtube.com/channel/UCkRIu1yJOC0gtvUKNFsF4hWw" target="_blank"><i class="youtube fas fa-play"></i></a></li>
             </ul>
           </div>
         </div>
@@ -55,16 +53,18 @@
       <div class="row">
         <div class="footer_menulist">
           <ul>
-            <li><a href="">Accessibility Statemen</a></li>
-            <li><a href="">Privacy Policy</a></li>
-            <li><a href="">Hyper Linking Policy</a></li>
-            <li><a href="">Copyright Policy</a></li>
-            <li><a href="">Terms and Conditions</a></li>
-            <li><a href="">Disclaimer</a></li>
-            <li><a href="">Archives</a></li>
-            <li><a href="">Help</a></li>
-            <li><a href="">Website Policy</a></li>
-            <li><a href="">Sitemap</a></li>
+            <li><a href="http://agriculture.up.gov.in/dbt/complaint.html"
+              target="_blank">{{'SUGGESSION_COMPLAINTS'| translate}}</a></li>
+            <li><a href="">{{'ACCESSIBILITY_STATEMENT'| translate}}</a></li>
+            <li><a href="">{{'PRIVACY_POLICY'| translate}}</a></li>
+            <li><a href="">{{'HYPERLINK'| translate}}</a></li>
+            <li><a href="">{{'COPYRIGHTS'| translate}}</a></li>
+            <li><a href="">{{'TERMS_CONDITIONS'| translate}}</a></li>
+            <li><a href="">{{'DISCLAIMER'| translate}}</a></li>
+            <li><a href="">{{'ARCHIVES'| translate}}</a></li>
+            <li><a href="">{{'HELP'| translate}}</a></li>
+            <li><a href="">{{'website_policy'| translate}}</a></li>
+            <li><a href="">{{'SITEMAP'| translate}}</a></li>
           </ul>
         </div>
       </div>
@@ -75,9 +75,8 @@
       <div class="row">
         <div class="col-md-6 offset-md-3">
           <div class="footer_copyright">
-            <p>Content on this website is published and managed by State Agriculture Directorate Uttar Pradesh Krishi
-              Bhawan Lucknow.
-              For any questions about this website, please contact "Web Information Manager".</p>
+            <p>{{'FOOTER_PARA1'|translate}}</p>
+            <p>{{'FOOTER_PARA2'|translate}}</p>
             <p>© State Agriculture Directorate Uttar Pradesh, India | All rights reserved.</p>
           </div>
         </div>
