--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="useful_link">
-          <h2>{{'USEFUL_LINKS'| translate}}</h2>
+          <h2 class="subheading p-0">{{'USEFUL_LINKS'| translate}}</h2>
           <ul>
             <li><a href="http://agrilicense.upagriculture.com/pcrs/"
               target="_blank">{{'PARTICIPATORY_CROP_MONITORING'| translate}}</a></li>
@@ -85,104 +85,3 @@
   </div>
 </footer>
 <!-- ======= Footer ======= -->
-<!-- <footer id="footer">
-    <div class="footer-top">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>{{'USEFUL_LINKS' | translate}}</h4>
-            <ul>
-              <li>
-                <i class="bx bx-chevron-right"></i>
-                <a href="#">{{'NATURAL_FARMING_PROGRAMME' | translate}}</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i>
-                <a href="#">{{'FPO_POWER' | translate}}</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i>
-                <a href="#">{{'PROBLEM_SOLVING' | translate}}</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i>
-                <a href="#">{{'SEED_CIRTIFCATION_INSTITUTE' | translate}}</a>
-              </li>
-
-              <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">{{'HELP' | translate}}</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i>
-                <a href="#">{{'ACCESSIBILITY_STATEMENT' | translate}}</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4 class="d-none d-sm-block">&nbsp;</h4>
-            <ul>
-              <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">{{'ARCHIVES' | translate}}</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">{{'HYPERLINK' | translate}}</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">{{'COPYRIGHTS' | translate}}</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">{{'TERMS_CONDITIONS' | translate}}</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">{{'DISCLAIMER' | translate}}</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">{{'PRIVACY_POLICY' | translate}}</a>
-              </li>
-
-            </ul>
-          </div>
-
-          <!-- <div class="col-lg-2 col-md-6 footer-links">
-            <h4>&nbsp;</h4>
-
-            <p>You are Visitor No: <strong>4643350</strong></p>
-            <p>Last reviewed and updated on :
-              18-07-2023</p>
-            <img src="assets/img/icons/numbercount.png" alt="number counter">
-          </div> --
-
-          <div class="col-lg-2 col-md-6 footer-newsletter">
-            <h4 class="d-none d-sm-block">&nbsp;</h4>
-            <p>{{'YOUR_VISITOR_NO' | translate}}: <strong>4643350</strong></p>
-            <p>{{'REVIEWED_DATE' | translate}}:
-              18-07-2023</p>
-            <p>
-              <strong>{{'FOLLOW_US' | translate}}</strong>
-            </p>
-            <p>
-              <img src="assets/img/socialmedia1.png" />
-            </p>
-          </div>
-          <div class="col-lg-3 ps-5 text-center">
-            <p class="text-center">
-              <img src="assets/img/cqw_logo1.png" class="mb-0 mt-5" />
-            </p>
-            <img src="assets/img/playstore1.png" />
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="copyright">
-        <span class="me-5">
-          © {{'STATE_AGRI_DIRECTORATE_UP' | translate}} | {{'ALL_RIGHTS_RESERVED' | translate}}.
-        </span>
-        <!-- <span class="me-5">Last reviewed and updated on 12 Jul, 2023 </span>
-        <span>Email Us: delhihighcourt@nic.in | Disclaimer | Sitemap</span> --
-      </div>
-    </div>
-  </footer>
-  <!-- End Footer -->
