--- a/src/app/cms/home/home.component.html
+++ b/src/app/cms/home/home.component.html
@@ -42,7 +42,7 @@
 
   <div class="what_new">
     <div class="whatnew_inner">
-      <h2>{{'WHATS_NEW' | translate}}</h2>
+      <h2 class="subheading">{{'WHATS_NEW' | translate}}</h2>
       <div class="scroll-bar-wrap">
         <div class="scroll-box">
         <ul class="newsTicker">
@@ -99,7 +99,7 @@
       <div class="row">
         <div class="col-lg-8">
           <div class="leader">
-            <h2>{{'KNOW_YOUR_LEADER'|translate}}</h2>
+            <h2 class="subheading">{{'KNOW_YOUR_LEADER'|translate}}</h2>
             <div class="our_leader">
               <div class="card">
                 <div class="leader_box">
@@ -161,7 +161,7 @@
         </div>
         <div class="col-lg-4">
           <div class="circulars">
-            <h2>{{'CIRCULAR'|translate}}</h2>
+            <h2 class="subheading">{{'CIRCULAR'|translate}}</h2>
             <div class="scroll-bar-wrap">
               <div class="scroll-box" style="height: 470px;">
             <ul>
@@ -210,7 +210,7 @@
           <div class="col-lg-8">
 
             <div class="dashboard_sec">
-              <h2><a class="dashboard_sec_color" href="http://agriculture.up.gov.in/dbt/misreports.aspx" target="_blank">{{'DASHBOARD'|translate}}</a></h2>
+              <h2 class="subheading"><a class="dashboard_sec_color" href="http://agriculture.up.gov.in/dbt/misreports.aspx" target="_blank">{{'DASHBOARD'|translate}}</a></h2>
             </div>
           </div>
         </div>
@@ -306,7 +306,7 @@
         <div class="col-lg-6">
           <div class="announcement">
             <div class="annc_heading">
-              <h2>{{'ANNOUNCEMENT'|translate}}</h2>
+              <h2 class="subheading">{{'ANNOUNCEMENT'|translate}}</h2>
               <a href="#">{{'VIEW_ALL'|translate}}</a>
             </div>
             <div class="scroll-bar-wrap">
@@ -349,7 +349,7 @@
         <div class="col-lg-6">
           <div class="advisory">
             <div class="advisory_heading">
-              <h2>{{'ADVISORY' | translate}}</h2>
+              <h2 class="subheading">{{'ADVISORY' | translate}}</h2>
               <a href="#">{{'VIEW_ALL'|translate}}</a>
             </div>
             <ul>
@@ -376,7 +376,7 @@
         <div class="col-lg-6">
           <div class="gallry">
             <div class="gallery_sec">
-              <h2>{{'GALLERY' | translate}}</h2>
+              <h2 class="subheading p-0">{{'GALLERY' | translate}}</h2>
               <a href="#">{{'VIEW_ALL'|translate}}</a>
             </div>
             <div class="main">
@@ -429,7 +429,7 @@
         </div>
         <div class="col-lg-6">
           <div class="gallery_sec">
-            <h2>{{'VIDEO_GALLERY' | translate}}</h2>
+            <h2 class="subheading p-0">{{'VIDEO_GALLERY' | translate}}</h2>
             <a href="#">{{'VIEW_ALL'|translate}}</a>
           </div>
           <div class="video"><video controls #videoPlayer style="width: 100%; height: 300px;">
@@ -440,234 +440,7 @@
       </div>
     </div>
   </section>
-  <!-- gallery end here -->
-  <!-- ======= Services Section ======= -->
-  <!-- <section id="services" class="services" style="padding-top: 20px">
-    <div class="container">
-      <div class="section-title text-center">
-        <img src="assets/img/h1-line-img1.png" />
-        <h1 class="font-weight-bold">{{'KNOW_YOUR_LEADER' | translate}}</h1>
-      </div>
-
-
-      <div class="row" [attr.data-aos]="'fade-up'">
-
-
-        <div class="col-12">
-        <div class="leader">
-        <div class="col" [attr.data-aos]="'zoom-in'" [attr.data-aos-delay]="'100'">
-          <div class="services-style-two-item">
-            <div class="thumb">
-              <img src="assets/img/cm.png" />
-            </div>
-            <h5 class="title">
-              <a href="#">
-                {{'YOGI_ADITYANATH' | translate}}
-              </a>
-              <span class="secondary-color fs-7">{{'CHIEF_MINISTER' | translate}}</span>
-            </h5>
-          </div>
-        </div>
-        <div class="col" [attr.data-aos]="'zoom-in'" [attr.data-aos-delay]="'100'">
-          <div class="services-style-two-item">
-            <div class="thumb">
-              <img src="assets/img/Surya.jpg" />
-            </div>
-            <h5 class="title">
-              <a href="#">
-               {{'SHRI_SURYA_PRATAP_SHAHI' | translate}}
-              </a>
-              <span class="secondary-color fs-7">{{'AGRICULTURAL_MINISTER' | translate}}
-              </span>
-            </h5>
-          </div>
-        </div>
-        <div class="col" [attr.data-aos]="'zoom-in'" [attr.data-aos-delay]="'100'">
-          <div class="services-style-two-item">
-            <div class="thumb">
-              <img src="assets/img/Baldev.jpg" />
-            </div>
-            <h5 class="title">
-              <a href="#">
-                {{'SHRI_BALDEV_SINGH_AULAKH' | translate}}
-              </a>
-              <span class="secondary-color fs-7">
-                {{'STATE_MINISTER_AGRICULTURE' | translate}}
-              </span>
-            </h5>
-          </div>
-        </div>
-        <div class="col" [attr.data-aos]="'zoom-in'" [attr.data-aos-delay]="'100'">
-          <div class="services-style-two-item">
-            <div class="thumb">
-              <img src="assets/img/Devesh.jpg" />
-            </div>
-            <h5 class="title">
-              <a href="#">
-                {{'DR_DEVESH_CHATURVEDI' | translate}}
-              </a>
-              <span class="secondary-color fs-7">
-               {{'ADD_CHIEF_SEC_AGRI' | translate}}
-              </span>
-            </h5>
-          </div>
-        </div>
-        <div class="col" [attr.data-aos]="'zoom-in'" [attr.data-aos-delay]="'100'">
-          <div class="services-style-two-item">
-            <div class="thumb">
-              <img src="assets/img/Vivek .jpg" />
-            </div>
-            <h5 class="title">
-              <a href="#">
-                {{'VIVEK_KUMAR_SINGH' | translate}}
-              </a>
-              <span class="secondary-color fs-7">{{'DIR_AGRI' | translate}}
-              </span>
-            </h5>
-          </div>
-        </div>
-      </div>
-      </div>
-      </div>
-    </div>
-  </section> -->
-  <!-- End Services Section -->
-
-  <!-- ======= About Section ======= -->
-  <!-- <section id="about" class="about">
-    <div class="container" [attr.data-aos]="'fade-up'">
-      <div class="row">
-        <div class="col-lg-12" [attr.data-aos]="'fade-left'" [attr.data-aos-delay]="100">
-          <div class="section-title text-center">
-            <img src="assets/img/h1-line-img-white.png" />
-            <p class="text-light">{{'HISTORY_TITLE' | translate}}</p>
-          </div>
-
-          <div class="row">
-            <div class="col-lg-12 mb-3">
-              <img src="assets/img/int-about.jpg" class="rounded-2 border img-fluid" />
-            </div>
-            <div class="col-lg-12 fs-6">
-              <p>
-                {{'HISTORY_PARA_1' | translate}}
-              </p>
-              <p>
-                {{'HISTORY_PARA_2' | translate}}
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-  <!-- End About Section -->
-
-  <!-- ======= Announcement Section ======= -->
-  <!-- <section id="team" class="team">
-    <div class="container" [attr.data-aos]="'fade-up'">
-      <div class="row">
-        <div class="col-lg-7">
-          <div class="announcement-box shadow p-3 mb-5 bg-white rounded">
-            <h2 class="brown">{{'ANNOUNCEMENT_2' | translate}}</h2>
-            <div class="row">
-              <div class="col-lg-8">
-                <p class="pb-0">
-                  {{'ANNOUNCEMENT_PARA' | translate}}
-                  <br />
-                  <span class="text-muted">{{'DATE' | translate}} : {{'NUMBERED_DATE' | translate}}</span>
-                </p>
-
-                <p class="pb-0 mb-0"><a href="#">{{'READ_MORE' | translate}} →</a></p>
-                <div>
-                  <span data-dir="prev">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path
-                        d="M11.925 4.5748L6.39999 11.9998L11.925 19.4248L9.02499 19.4248L3.47499 11.9998L9.02499 4.5748L11.925 4.5748ZM19.3 4.57481L13.775 11.9998L19.3 19.4248L16.375 19.4248L10.85 11.9998L16.375 4.57481L19.3 4.57481Z"
-                        fill="#0F172A"></path>
-                    </svg>
-                  </span>
-                  <span data-dir="next"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                      xmlns="http://www.w3.org/2000/svg">
-                      <path
-                        d="M12.075 19.4252L17.6 12.0002L12.075 4.5752H14.975L20.525 12.0002L14.975 19.4252H12.075ZM4.70001 19.4252L10.225 12.0002L4.70001 4.5752H7.62501L13.15 12.0002L7.62501 19.4252H4.70001Z"
-                        fill="#0F172A"></path>
-                    </svg></span>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <img src="../../../assets/img/announcement-img.jpg" alt="Image" title="Image" class="img-fluid" />
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-5">
-          <div class="row">
-            <div class="col-lg-6">
-              <div class="dashboard shadow p-3 mb-4 bg-white rounded text-center">
-                <p>{{'FARMER_REGISTRATION' | translate}}</p>
-                <h3 class="font-weight-bold fs-2 text-green">450</h3>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="dashboard shadow p-3 mb-4 bg-white rounded text-center">
-                <p>{{'TOTAL_GRIEVANCE_RAISED' | translate}}</p>
-                <h3 class="font-weight-bold fs-2 text-green">1450</h3>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="dashboard shadow p-3 mb-4 bg-white rounded text-center">
-                <p>{{'RESOLVED_GRIEVANCE_NO' | translate}}</p>
-                <h3 class="font-weight-bold fs-2 text-green">1050</h3>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="dashboard shadow p-3 mb-4 bg-white rounded text-center">
-                <p>{{'VISITORS_COUNT' | translate}}</p>
-                <h3 class="font-weight-bold fs-2 text-green">45450</h3>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-  <!-- End Judges Section -->
-
-  <!-- ======= Services Section ======= -->
-  <!-- <section id="gallery" class="services" style="padding-top: 20px">
-    <div class="container">
-      <div class="section-title text-center">
-        <img src="assets/img/h1-line-img1.png" />
-        <h1 class="font-weight-bold">{{'AWESOME_GALLERY' | translate}}</h1>
-      </div>
-
-            <div class="row d-flex justify-content-center" [attr.data-aos]="'fade-up'">
-                <div class="col-lg-6 mb-4" [attr.data-aos]="'zoom-in'" [attr.data-aos-delay]="'100'">
-                    <div class="img-fluid img-zoom">
-                        <img src="assets/img/1g.jpg" class="img-fluid" />
-                    </div>
-                </div>
-                <div class="col-lg-6 mb-4" [attr.data-aos]="'zoom-in'" [attr.data-aos-delay]="'100'">
-                    <div class="img-fluid img-zoom">
-                        <img src="assets/img/2g.jpg" class="img-fluid" />
-                    </div>
-                </div>
-                <div class="col-lg-6 mb-4" [attr.data-aos]="'zoom-in'" [attr.data-aos-delay]="'100'">
-                    <div class="img-fluid img-zoom">
-                        <img src="assets/img/3g.jpg" class="img-fluid" />
-                    </div>
-                </div>
-                <div class="col-lg-6 mb-4" [attr.data-aos]="'zoom-in'" [attr.data-aos-delay]="'100'">
-                    <div class="img-fluid img-zoom">
-                        <img src="assets/img/4g.jpg" class="img-fluid" />
-                    </div>
-                </div>
-
-
-
-            </div>
-        </div>
-    </section> -->
+  
     <!-- End Services Section -->
     <!-- ======= Clients Section ======= -->
     <section id="clients" class="clients">
@@ -685,43 +458,7 @@
 
             </swiper>
         </div>
-            <!-- <div class="clients-slider swiper">
-                <div class="swiper-wrapper align-items-center">
-                    <div class="swiper-slide">
-                        <a href="https://stpi.in/" target="_blank"><img src="assets/img/clients/client-1.png"
-                                class="img-fluid" alt="" /></a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="https://mgov.gov.in/" target="_blank"><img src="assets/img/clients/client-2.png"
-                                class="img-fluid" alt="" /></a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="https://data.gov.in/" target="_blank"><img src="assets/img/clients/client-3.png"
-                                class="img-fluid" alt="" /></a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="https://www.india.gov.in/" target="_blank"><img src="assets/img/clients/client-4.png"
-                                class="img-fluid" alt="" /></a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="https://stage.ras.gov.in/v2" target="_blank"><img src="assets/img/clients/client-5.png"
-                                class="img-fluid" alt="" /></a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="https://www.mygov.in/" target="_blank"><img src="assets/img/clients/client-6.png"
-                                class="img-fluid" alt="" /></a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="https://digitalseva.csc.gov.in/" target="_blank"><img
-                                src="assets/img/clients/client-7.png" class="img-fluid" alt="" /></a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="https://www.nielit.gov.in/" target="_blank"><img src="assets/img/clients/client-8.png"
-                                class="img-fluid" alt="" /></a>
-                    </div>
-                </div>
-                <div class="swiper-pagination"></div>
-            </div> -->
+          
         </div>
     </section>
     <!-- End Clients Section -->
